--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+    <head>  
+        <title>Formulario professora</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./css/global.css">
+    </head>
+    <body>
+        <h1>Login</h1>
+        <form>
+            <label for="nomeusuario">Usuario:</label>
+            <input name="nomeusuario" type="text" placeholder="Nome Do Usuario"><br>
 
+            <label for="senhausuario">Senha:</label>
+            <input name="senhausuario" type="text" placeholder="Senha Do Usuario"><br>
+
+            <label><input name="manterlogado" type="checkbox" value="sim" /> Manter Logado:</label><br>
+
+            <button type="submit">Login</button><br>
+            <a href="#URL">Ainda não tem conta?</a>
+            <a href="#URL">Esqueceu a senha?</a>
+        </form>
+    </body>
+</html>
